@@ -11,6 +11,7 @@
 Erstellt: 21.06.11
 Stable: 
 Neue Features:
+- Model_RowCache: cached angegebene columns von rows im apc cache wenn per getRow() gesucht wird
 
 möglicherweise nicht kompatible Änderungen:
 - User_Box: aufgeteilt in zwei komponenten, wenn eingeloggt LoggedIn Unterkomponente
